bitfields/tests/compile_error_cases/errors/bitfield_field_unsupported_type.rs
use bitfields::bitfield;

#[bitfield(u8)]
pub struct Bitfield {
    a: (u8, u8),
}

fn main() {}

